--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "generate-license-file": "^2.0.0"
   },
   "dependencies": {
-    "license-checker-rseidelsohn": "^4.1.1"
+    "license-checker-rseidelsohn": "^4.1.1",
+    "roleout-lib": "^2.1.0-pre2"
   }
 }
