--- a/cli/package.json
+++ b/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "roleout-cli",
-  "version": "2.1.0-pre2",
+  "version": "2.2.0",
   "description": "Roleout CLI",
   "main": "./build/cli.js",
   "bin": {
